<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding= "0dp"
    tools:context="com.cyril.training.dayseventeen.Main3Activity">


    <TextView
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/latitude"
        android:id="@+id/textView_for_latitude"
        android:layout_alignParentTop="true"
        android:layout_marginTop="68dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/longitude"
        android:id="@+id/textView_for_longitude"
        android:layout_below="@+id/textView_for_latitude"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="38dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


    <Button
        android:padding="10dp"
        android:background="@android:color/holo_orange_dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_updates"
        android:id="@+id/button_for_location_updates"
        android:onClick="locationUpdatesButton"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
